syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rickyjia2018/peakpal-carpool/pb";

message Resort{
    int64 ID = 1;
    string name = 2;
    int64 country = 3;
    google.protobuf.Timestamp created_at = 4;
}

message GetResortRequest{
    int64 ID = 1;
}
message GetResortResponse{
    Resort resort = 1;
}
