syntax = "proto3";

package pb;

// import "google/api/annotations.proto";

import "rpc_authorize_user.proto";
import "rpc_country.proto";
import "rpc_resort.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/rickyjia2018/peak-pal-server/pb";


service PeekPal {
   
    rpc AuthorizeUser (AuthorizeUserRequest) returns (AuthorizeUserResponse);
    rpc GetCountry (GetCountryRequest) returns(GetCountryResponse);
    rpc ListCountries (ListCountriesRequest) returns  (ListCountriesResponse);
    rpc GetResort (GetResortRequest) returns(GetResortResponse);
    rpc ListResorts (ListResortsRequest) returns  (ListResortsResponse);
}
